--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   },
   "dependencies": {
     "bootstrap-sass": "^3.0.0",
-    "gulp-clean": "^0.3.1",
+    "bower": "^1.8.0",
     "gulp-livereload": "^3.8.0",
-    "laravel-elixir": "*"
+    "laravel-elixir": "*",
+    "rimraf": "^2.4.0"
   }
 }
