--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "devDependencies": {
     "gulp": "^3.9.1"
   },
+  "scripts": {
+    "dev": "node_modules/.bin/gulp watch-dev",
+    "production": "node_modules/.bin/gulp"
+  },
   "dependencies": {
     "bootstrap-sass": "^3.0.0",
     "bower": "^1.8.0",
